<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.apicatalog</groupId>
        <artifactId>titanium</artifactId>
        <version>1.7.0</version>
        <relativePath>pom_parent.xml</relativePath>
    </parent>
    <artifactId>titanium-json-ld</artifactId>
    <packaging>jar</packaging>
    <name>Titanium JSON-LD 1.1 (JRE11)</name>
    <url>https://github.com/filip26/titanium-json-ld</url>
    <scm>
        <connection>scm:git:git://github.com/filip26/titanium-json-ld.git</connection>
        <developerConnection>
            scm:git:git://github.com/filip26/titanium-json-ld.git</developerConnection>
        <url>https://github.com/filip26/titanium-json-ld/tree/main</url>
    </scm>
    <properties>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <envSources>src/main/java11</envSources>
        <titanium.rdf.api.version>1.0.0</titanium.rdf.api.version>
        <titanium.rdf.nquads.version>1.0.2</titanium.rdf.nquads.version>
        <guava.version>33.4.7-jre</guava.version>
    </properties>
    <dependencies>
        <dependency>
          <groupId>com.apicatalog</groupId>
          <artifactId>titanium-jcs</artifactId>
          <version>1.1.1</version>
        </dependency>
        <dependency>
          <groupId>com.apicatalog</groupId>
          <artifactId>titanium-rdf-api</artifactId>
          <version>${titanium.rdf.api.version}</version>
        </dependency>
        <dependency>
          <groupId>com.apicatalog</groupId>
          <artifactId>titanium-rdf-n-quads</artifactId>
          <version>${titanium.rdf.nquads.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
          <groupId>com.apicatalog</groupId>
          <artifactId>titanium-rdf-primitives</artifactId>
          <version>1.0.3</version>
          <scope>test</scope>
        </dependency>   
        <dependency>
          <groupId>com.apicatalog</groupId>
          <artifactId>titanium-rdfc</artifactId>
          <version>2.0.0</version>
          <scope>test</scope>       
        </dependency>
    </dependencies>
</project>